syntax = "proto3";
package utxopb;

message Utxo {
    bytes   amount = 1;
    bytes   public_key_hash = 2;
    bytes   txid = 3;
    uint32  tx_index = 4;
    uint32  utxoType = 5;
    string  contract = 6;
    bytes  prevUtxoKey = 7;
    bytes  nextUtxoKey = 8;
}

 message UtxoInfo {
     bytes   lastUtxoKey = 1;
     bytes   utxoCreateContractKey = 2;
 }