package errorValues

import "errors"

var (
	ErrAmountUnderflow                = errors.New("amount: underflow (value is negative)")
	ErrAmountInvalidString            = errors.New("amount: invalid string when converting to amount")
	ErrCantCreateEmptyNode            = errors.New("tree: node index and value must not be empty")
	ErrNodeAlreadyHasParent           = errors.New("tree: node already has a parent")
	ErrTopicOccupied                  = errors.New("topic already occupied")
	ErrNoSubscribersFound             = errors.New("no command handlers")
	ErrNotIterable                    = errors.New("leaf node is not iterable")
	ErrUnknownNode                    = errors.New("unknown node type")
	ErrEmptyStack                     = errors.New("empty stack")
	ErrEmptyBranch                    = errors.New("empty branch node")
	ErrWrongHash                      = errors.New("wrong hash")
	ErrNotFound                       = errors.New("not found")
	ErrInvalidProtoToNode             = errors.New("pb Message cannot be converted into Trie Node")
	ErrNilNode                        = errors.New("nil node")
	ErrKeyShort                       = errors.New("wrong key, too short")
	ErrKeyLong                        = errors.New("wrong key, too long")
	ErrAlreadyProducer                = errors.New("already a producer")
	ErrMaxProducer                    = errors.New("maximum number of producers reached")
	ErrIncorrectPublicKey             = errors.New("public key not correct")
	ErrEmptyPublicKeyHash             = errors.New("empty public key hash")
	ErrInvalidPubKeyHashVersion       = errors.New("invalid public key hash version")
	ErrInvalidKey                     = errors.New("key is invalid")
	ErrVoutNotFound                   = errors.New("vout not found in current transaction")
	ErrTransactionIDInvalid           = errors.New("transaction: ID is invalid")
	ErrTransactionAmountInvalid       = errors.New("transaction: amount is invalid")
	ErrTransactionGasLimitInvalid     = errors.New("transaction: gas limit is invalid")
	ErrTransactionTipInvalid          = errors.New("transaction: tip is invalid")
	ErrTransactionTooManyVin          = errors.New("transaction: too many vin in a transaction")
	ErrOutOfGasLimit                  = errors.New("transaction: out of gas limit")
	ErrInsufficientFund               = errors.New("insufficient balance")
	ErrInvalidAmount                  = errors.New("transaction: invalid amount (must be > 0)")
	ErrTXInputNotFound                = errors.New("transaction: transaction input not found")
	ErrNewUserPubKeyHash              = errors.New("transaction: create pubkeyhash error")
	ErrNoGasChange                    = errors.New("transaction: all gas has been consumed")
	ErrInsufficientBalance            = errors.New("transaction: insufficient balance, cannot pay for GasLimit")
	ErrSignaturesEmpty                = errors.New("transaction: signatures empty")
	ErrSignaturesInvalid              = errors.New("transaction: signatures invalid")
	ErrPrevUtxosMissing               = errors.New("transaction: prevUtxos not found")
	ErrPublicKeyHashDoesNotMatch      = errors.New("the public key hash does not match")
	ErrVoutInvalid                    = errors.New("transaction: vout is invalid")
	ErrAddSameUtxo                    = errors.New("add utxo error: the utxo is same as the last utxo")
	ErrRemoveDuplicateUtxo            = errors.New("remove utxo error: find duplicate utxo in db")
	ErrUtxoInfoExists                 = errors.New("this utxoInfo already exists")
	ErrECDSAInputPvtKey               = errors.New("ecdsa: please input private key")
	ErrAlgorithmInvalid               = errors.New("invalid algorithm")
	ErrValueNotString                 = errors.New("value must be string")
	ErrVersionInvalid                 = errors.New("version not supported")
	ErrKDFInvalid                     = errors.New("kdf not supported")
	ErrCipherInvalid                  = errors.New("cipher not supported")
	ErrDecrypt                        = errors.New("could not decrypt key with given passphrase")
	ErrUninitializedProvider          = errors.New("uninitialized provider")
	ErrKeyNotUnlocked                 = errors.New("key not unlocked")
	ErrInvalidPassphrase              = errors.New("passphrase is invalid")
	ErrNeedAlias                      = errors.New("need alias")
	ErrKeyNotFound                    = errors.New("key not found")
	ErrNeedEntriesMap                 = errors.New("need entries map")
	ErrInvalidMsgLen                  = errors.New("invalid message length, need 32 bytes")
	ErrGetPublicKeyFailed             = errors.New("private key to public failed")
	ErrInvalidSignature               = errors.New("invalid signature")
	ErrInvalidPrivateKey              = errors.New("invalid private key")
	ErrInvalidPublicKey               = errors.New("invalid public key")
	ErrSignFailed                     = errors.New("sign failed")
	ErrRecoverFailed                  = errors.New("recovery failed")
	ErrGetPvtKeyFirst                 = errors.New("please get private key first")
	ErrGivePubKeyFirst                = errors.New("please give public key first")
	ErrPointNotOnCurve                = errors.New("point is not on the P256 curve")
	ErrWrongKeyType                   = errors.New("not an ECDSA key")
	ErrNoPEMFound                     = errors.New("no PEM block found")
	ErrInvalidVRF                     = errors.New("invalid VRF proof")
	ErrEvaluateFailed                 = errors.New("failed to evaluate VRF")
	ErrTooManyUtxoFund                = errors.New("cli: too many utxo, should merge")
	ErrInvalidAddress                 = errors.New("invalid address")
	ErrInvalidSenderAddress           = errors.New("invalid sender address")
	ErrInvalidRcverAddress            = errors.New("invalid receiver address")
	ErrPasswordIncorrect              = errors.New("password is incorrect")
	ErrPathEmpty                      = errors.New("empty path")
	ErrPasswordEmpty                  = errors.New("empty password")
	ErrEmptyBlocks                    = errors.New("received no block")
	ErrPeerNotFound                   = errors.New("peerId not in checklist")
	ErrMismatchResponse               = errors.New("response is not for waiting command")
	ErrParentBlockNotFound            = errors.New("not able to find parent block in blockchain")
	ErrSimulatedStorageFailure        = errors.New("simulated storage failure")
	ErrBlockDoesNotExist              = errors.New("block does not exist in db")
	ErrBlockDoesNotFound              = errors.New("the block was not found after lib")
	ErrPrevHashVerifyFailed           = errors.New("prevhash verify failed")
	ErrTransactionNotFound            = errors.New("transaction not found")
	ErrTransactionVerifyFailed        = errors.New("transaction verification failed")
	ErrRewardTxVerifyFailed           = errors.New("reward transaction verification failed")
	ErrProducerNotEnough              = errors.New("producer number is less than ConsensusSize")
	ErrLibPolicyNil                   = errors.New("libPolicy is nil")
	ErrContractErrorSyntax            = errors.New("contract syntax error")
	ErrSubsidyCheckFail               = errors.New("transaction: subsidy check failed")
	ErrInvalidGasPrice                = errors.New("invalid gas price, should be in (0, 10^12]")
	ErrInvalidGasLimit                = errors.New("invalid gas limit, should be in (0, 5*10^10]")
	ErrExecutionFailed                = errors.New("execution failed")
	ErrUnsupportedSourceType          = errors.New("unsupported source type")
	ErrLoadError                      = errors.New("contract load error")
	ErrMissingEngineManager           = errors.New("VerifyAndCollectContractOutput: is missing SCEngineManager when verifying transactions")
	ErrNegativeGasPrice               = errors.New("CollectContractOutput: gas price must be a positive number")
	ErrUTXONotFound                   = errors.New("utxo not found when trying to remove from cache")
	ErrTXInputInvalid                 = errors.New("txInput refers to non-existing transaction")
	ErrUtxoAlreadyRemoved             = errors.New("the utxo already has been removed")
	ErrTxNode                         = errors.New("txNode is nil")
	ErrDuplicateMetric                = errors.New("unable to register duplicate metric")
	ErrInvalidPingParamaters          = errors.New("invalid ping service parameters")
	ErrPingServiceRunning             = errors.New("ping service already running")
	ErrPingServiceNotStarted          = errors.New("can not stop a ping service that was never started")
	ErrConnectionsFull                = errors.New("connection is full")
	ErrStreamAlreadyConnected         = errors.New("stream is already connected")
	ErrLengthTooShort                 = errors.New("message length is too short")
	ErrInvalidMessageFormat           = errors.New("invalid message format")
	ErrCheckSumIncorrect              = errors.New("incorrect checksum")
	ErrLevelDbNotAbleToOpenFile       = errors.New("leveldb failed to open file")
	ErrInvalidStorageKey              = errors.New("invalid state key")
	ErrExecutionTimeout               = errors.New("execution timeout")
	ErrInsufficientGas                = errors.New("insufficient gas")
	ErrExceedMemoryLimits             = errors.New("exceed memory limits")
	ErrInjectTracingInstructionFailed = errors.New("inject tracing instructions failed")
	ErrLimitHasEmpty                  = errors.New("limit args has empty")
	ErrSetMemorySmall                 = errors.New("set memory small than v8 limit")
	ErrUnexpected                     = errors.New("unexpected sys error")
	ErrInnerExecutionFailed           = errors.New("multi execution failed")
	ErrAddressNotFound                = errors.New("address not found in local accounts")
	ErrMock                           = errors.New("err")
)
